--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Mahadev Khopkar",
   "license": "ISC",
   "devDependencies": {
-   "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
   }
- 
 }
